# meetchecker

./: .gitignore  LICENSE  MANIFEST.in  README.md  checkmeet.yaml  pyproject.toml  requirements.txt
src/meetchecker/: __main__.py  check.py  checks-sample.yaml  color_wheel.py  config-sample.yaml  core.py  daemon.py  datasourcing.py  dump.py  files.py  recovery.py  report.py  utils.py
src/meetchecker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/meetchecker/checkers/: base.py  compare_vs_time_standard.py  disimproved_by_percent_threshold.py  incorrect_averaging_of_two_pad_times.py  is_a_relay.py  ns_but_pad_times.py  only_n_or_fewer_pad_times.py  popped_by_percent_threshold.py  popped_time_standard.py  set_new_record.py  two_pad_times_and_inconsistent.py
tests/: test_basics.py
